<resources>
    <string name="app_name">Food Map</string>
    <string name="title_usernameEmail">Email</string>
    <string name="title_password">Password</string>
    <string name="title_open">Open Map</string>
    <string name="other_login">Logging in by google</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="text_search">search</string>
    <string name="text_tanking">Ranking</string>
    <string name="text_like">Likes</string>
    <string name="text_me">Me</string>
    <string name="hint_usernameEmail">enter email</string>
    <string name="hint_password">password</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="rating_type">
        <item>Price</item>
        <item>Score</item>
        <item>Distance</item>
    </string-array>

    <string name="blue_sky_restaurant">Blue Sky Restaurant</string>
    <string name = "dream_coffee">Dream Coffee</string>
    <string name="go_brunch">Go Brunch</string>
    <string name="green_valley">Green Valley</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="rating_type">
        <item>Price</item>
        <item>Score</item>
        <item>Distance</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
