<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodmap_background"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">


        <ImageView

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/foodmap_logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/background_light"
            android:padding="8dp"
            android:text = "Food Map"
            android:textSize="36sp"
            android:textStyle="italic"
            android:textColor="#ED897E"
            />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/title_usernameEmail"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_username"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/hint_usernameEmail" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:layout_marginStart="2dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/title_password"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id = "@+id/enter_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint = "@string/hint_password"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
        android:id = "@+id/login_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F097A5"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/title_open"
        android:onClick="login"/>

    <Button
    android:id = "@+id/sign_up_button"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#F097A5"
    android:padding="8dp"
    android:layout_marginTop="16dp"
    android:textSize="16sp"
    android:text="@string/sign_up"
    android:onClick="signUp"/>



    <Button
        android:id = "@+id/auth_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FDF5B8"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/other_login"

        />
    </LinearLayout>

    </LinearLayout>

</ScrollView>