<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="250dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/title_username"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/title_password"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp" />


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:background="#F097A5"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/title_open"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FDE6FF"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/other_login"
        android:onClick="loginAuth"
        />

</LinearLayout>